# mpl-volume-viewer

./: .gitignore  README.md  mpl_slice_viewer.py  mpl_volume_viewer.py  setup.cfg  slice_view.py
notebooks/: Viewing 3D volumetric data with matplotlib.ipynb  blog2.markdown
