[metadata]
name = mpl-slice-viewer
url = https://github.com/jni/mpl-slice-viewer
download_url = https://github.com/jni/mpl-slice-viewer
license = BSD 3-Clause
license_file = LICENSE
description = matplotlib orthoslice volume viewer in Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Juan Nunez-Iglesias
author_email = juan.nunez-iglesias@monash
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Framework :: Matplotlib


[options]
version = 0.1.0
py_modules =
    mpl_slice_viewer
zip_safe = True
python_requires = >=3.6
include_package_data = True
install_requires =
    matplotlib>=3.0
    numpy>=1.16.0
